log
Fri 15 Sep 2023 05:13:49 PM UTC: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:5: error: expected ‘,’ or ‘;’ before ‘if’
   42 |     if (map != NULL) {
      |     ^~
treemap.c:47:8: error: ‘TreeMap’ has no member named ‘size’
   47 |     map->size = 0;
      |        ^~
treemap.c:48:23: error: ‘lt’ undeclared (first use in this function)
   48 |     map->lower_than = lt
      |                       ^~
treemap.c:48:23: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:48:25: error: expected ‘;’ before ‘return’
   48 |     map->lower_than = lt
      |                         ^
      |                         ;
   49 | 
   50 |     return NULL;
      |     ~~~~~~               
treemap.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5c69fba
Fri 15 Sep 2023 05:14:05 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:8: error: ‘TreeMap’ has no member named ‘size’
   46 |     map->size = 0;
      |        ^~
treemap.c:47:23: error: ‘lt’ undeclared (first use in this function)
   47 |     map->lower_than = lt
      |                       ^~
treemap.c:47:23: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:47:25: error: expected ‘;’ before ‘return’
   47 |     map->lower_than = lt
      |                         ^
      |                         ;
   48 | 
   49 |     return NULL;
      |     ~~~~~~               
treemap.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7f244fd
Fri 15 Sep 2023 05:23:46 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:8: error: ‘TreeMap’ has no member named ‘size’
   46 |     map->size = 0;
      |        ^~
treemap.c:47:23: error: ‘lt’ undeclared (first use in this function)
   47 |     map->lower_than = lt;
      |                       ^~
treemap.c:47:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d2d2391
Fri 15 Sep 2023 05:24:07 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:8: error: ‘TreeMap’ has no member named ‘size’
   46 |     map->size = 0;
      |        ^~
treemap.c:47:23: error: ‘lt’ undeclared (first use in this function)
   47 |     map->lower_than = lt;
      |                       ^~
treemap.c:47:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7e22acc
Fri 15 Sep 2023 05:27:33 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:47:23: error: ‘lt’ undeclared (first use in this function)
   47 |     map->lower_than = lt;
      |                       ^~
treemap.c:47:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
38cd5ce
Fri 15 Sep 2023 05:27:46 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|8
total_score: 0/70
0047ebd
Fri 15 Sep 2023 05:28:02 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
783d44f
Fri 15 Sep 2023 05:28:44 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:48:5: error: expected ‘;’ before ‘return’
   48 |     return map;
      |     ^~~~~~
treemap.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
055cfbe
Fri 15 Sep 2023 05:28:51 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
0f104f8
